This is a record of changes to SerialEM since it was first publicly released.

* marks changes or enhancements noticeable to the user, or items of particular
significance.
============================================================================
2/18/17: Switched to using standard API for Direct Electron camera instead of
COM interface.  To use a DE camera, a small plugin, DEcamPlugin.dll, and the
interface library, DeInterface.Win32.dll, must be put in the directory with
SerialEM, but these are not required to run the program.

2/18/17: Made it show a dose rate for K2 counting modes even when there is no
counts per electron defined (In 3.6).

2/17/17: When a click in an FFT indicates a low defocus where equations break
down, it will no longer draw circles at invalid positions or report an invalid
defocus (In 3.6).

2/16/17: When changing mag or spot with scope control panel, it will show the
target mag or spot immediately with -> in front of it, until the change is
finished.  Increased multiple click interval to 0.35 sec.  Changed mag output
to show K at 100K and above (In 3.6).

2/10/17: Implemented local variables and local loop indexes that are defined
and accessible only within one function or script.

2/10/17: It is now allowed for script loop counts to be 0 or negative.

2/9/17: Fixed error message when assigning to a loop index variable (In 3.6).

2/8/17: SEM_3-6-2
2/8/17: Fixed rejection of fixed pattern noise peak when measuring defocus to
account for autofocus offset and View defocus properly and to work right on
the second pair of images (In 3.6).

2/8/17: Fixed autofocus with Low Dose View when there is a View defocus
offset, modified script command when just measuring defocus to give either the
defocus at the View area, as it always did, or the implied defocus of Record
(In 3.6).

2/5/17: Fixed LongOperation Da #, broken 12/18/16 (In 3.6).

1/31/17: Added property to allow taking images in spectroscopy mode.
